tests/macros/confirm/plugin.stderr
error: option `plugin` does not exist for kind `confirm`
 --> $DIR/plugin.rs:2:47
  |
2 |     let q = inquisition::questions![Confirm { plugin: todo!() }];
  |                                               ^^^^^^
