tests/macros/confirm/plugin.rs
fn main() {
    let q = inquisition::questions![Confirm { plugin: todo!() }];
}
